# ---------------------------------------------
#  koffee-candle workspace / library manifest
#  — targets desktop (native) by default —
#      ▸ production-ready build: `cargo build`
#      ▸ development build:      `cargo build --features dev`
#      ▸ WASM (browser):         `cargo build --target wasm32-unknown-unknown --features web`
# ---------------------------------------------

[package]
name         = "koffee"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description  = "Cross-platform wake-word detector: Candle ⚡ KFC front-end"
authors      = ["David Maple <david@cyrup.ai>"]

# ------------------------------------------------
#  Dependencies
# ------------------------------------------------
[dependencies]
fluent-voice-workspace-hack = { version = "0.1.0", path = "../../workspace-hack" }

# — DSP / NN (base dependencies - no acceleration features) —
candle-core = { git = "https://github.com/huggingface/candle", branch = "main", default-features = false }
candle-nn = { git = "https://github.com/huggingface/candle", branch = "main", default-features = false }

# — audio / resampling —
# rubato is in workspace-hack
# rustfft is in workspace-hack
hound = "3.5"

# — containers / utils —
arrayvec = "0.7"
# smallvec is in workspace-hack
indexmap = "2.6"
thiserror = "2.0"
# log is in workspace-hack

# — serde / misc —
# serde is in workspace-hack
# serde_json is in workspace-hack
ciborium = "0.2"
# strum is in workspace-hack

# — optional parallelism (desktop only) —
rayon = { version = "1.10", optional = true }

# — browser bindings (wasm32 build only) —
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["MediaDevices","MediaStream","AudioContext","console"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
anyhow = "1.0"
rustfft = "6.4.0"
strum = { version = "0.27.1", features = ["derive"] }
rubato = "0.16.2"
serde = { version = "1.0.219", features = ["derive"] }
smallvec = "1.15.1"
log = "0.4.27"
clap = { version = "4.5.41", features = ["derive"] }
# tokio is in workspace-hack
# clap is in workspace-hack

[dev-dependencies]
cpal = "0.15"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
tempfile = "3.8"

# ------------------------------------------------
#  Feature flags
# ------------------------------------------------
[features]
# ───────────── default: desktop, release-ready ─────────────
default = ["desktop"]

# --- Core build flavours -----------------------------------
desktop = ["rayon"]          # native build – includes SIMD & Rayon
web     = ["wasm-bindgen",
           "js-sys",
           "web-sys/Window",
           "console_error_panic_hook"] # wasm32-unknown-unknown target

# --- Developer conveniences (opt-in) -----------------------
dev = ["debug", "desktop"]   # ← enable with `--features dev`
debug = []                   # extra logging / assertions

# --- Candle backend features (required for all candle crates) -----
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
mkl = ["candle-core/mkl", "candle-nn/mkl"]

# --- Optional extended functionality -----------------------
record = []                  # WAV recording of detection windows
display = []                 # SVG / terminal visualisations
audio   = []                 # gate any OS-specific audio I/O that may be added

# Ensure mutually-exclusive defaults:
# (cargo resolves additive sets – desktop or web must be explicit)

