# ---------------------------------------------
#  koffee-candle workspace / library manifest
#  — targets desktop (native) by default —
#      ▸ production-ready build: `cargo build`
#      ▸ development build:      `cargo build --features dev`
#      ▸ WASM (browser):         `cargo build --target wasm32-unknown-unknown --features web`
# ---------------------------------------------

[package]
name         = "fluent_voice_whisper"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/davidmaple/fluent-voice"
description  = "Cross-platform wake-word detector: Candle ⚡ KFC front-end"
authors      = ["David Maple <david@cyrup.ai>"]

# ------------------------------------------------
#  Dependencies
# ------------------------------------------------
[dependencies]
workspace-hack = { version = "0.1.0", path = "../../workspace-hack" }

# — DSP / NN —
candle-core    = "0.8.2"
candle-nn      = "0.8.2"

# — audio / resampling —
# rubato         = { version = "0.16", default-features = false, features = ["fft_resampler"] } # in workspace-hack
# rustfft        = { version = "6.3.0", default-features = false } # in workspace-hack
hound          = "3.5.1"

# — containers / utils —
arrayvec       = "0.7.6"
# smallvec       = "2.0.0-alpha.10" # in workspace-hack
indexmap       = "2.8.1"
thiserror      = "2.0.12"
# log            = "0.4.27" # in workspace-hack

# — serde / misc —
# serde          = { version = "1.0.219", features = ["derive"], default-features = false } # in workspace-hack
# serde_json     = "1.0.140" # in workspace-hack
ciborium       = "0.2.2"
# strum          = { version = "0.27", features = ["derive"] } # in workspace-hack

# — optional parallelism (desktop only) —
rayon          = { version = "1.10.0", optional = true }

# — browser bindings (wasm32 build only) —
wasm-bindgen   = { version = "0.2.99", optional = true }
js-sys         = { version = "0.3.76", optional = true }
web-sys        = { version = "0.3.76", features = ["MediaDevices","MediaStream","AudioContext","console"], optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

# — fluent-voice integration —
fluent_voice   = { path = "../../fluent-voice", default-features = false, optional = true }
fluent_voice_macros = { path = "../../macros" }
# tokio          = { version = "1.45.1", features = ["rt", "sync"], optional = true } # in workspace-hack
# futures-core   = { version = "0.3.31", optional = true } # in workspace-hack
# futures-util   = { version = "0.3.31", optional = true } # in workspace-hack
async-stream   = { version = "0.3.6", optional = true }

# ------------------------------------------------
#  Feature flags
# ------------------------------------------------
[features]
# ───────────── default: desktop, release-ready ─────────────
default = ["desktop"]

# --- Core build flavours -----------------------------------
desktop = ["rayon"]          # native build – includes SIMD & Rayon
web     = ["wasm-bindgen",
           "js-sys",
           "web-sys/Window",
           "console_error_panic_hook"] # wasm32-unknown-unknown target


# --- Developer conveniences (opt-in) -----------------------
dev = ["debug", "desktop"]   # ← enable with `--features dev`
debug = []                   # extra logging / assertions

# --- Optional extended functionality -----------------------
record = []                  # WAV recording of detection windows
display = []                 # SVG / terminal visualisations
audio   = []                 # gate any OS-specific audio I/O that may be added

# Ensure mutually-exclusive defaults:
# (cargo resolves additive sets – desktop or web must be explicit)
