[package]
name        = "ort"
version.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.docs.rs]
features = [ "std", "ndarray", "half", "num-complex", "training", "fetch-models", "load-dynamic", "copy-dylibs" ]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [ "--cfg", "docsrs" ]

[features]
default = [ "std", "ndarray", "tracing", "download-binaries", "copy-dylibs" ]

std = [ "ort-sys/std", "ndarray/std", "tracing?/std" ]
training = [ "ort-sys/training" ]

ndarray = [ "dep:ndarray" ]
half = [ "dep:half" ]
num-complex = [ "dep:num-complex" ]
tracing = [ "dep:tracing" ]

fetch-models = [ "std", "dep:ureq", "dep:sha2" ]
download-binaries = [ "ort-sys/download-binaries" ]
load-dynamic = [ "std", "libloading", "ort-sys/load-dynamic" ]
copy-dylibs = [ "ort-sys/copy-dylibs" ]

alternative-backend = [ "ort-sys/disable-linking" ]

cuda = [ "ort-sys/cuda" ]
tensorrt = [ "ort-sys/tensorrt" ]
openvino = [ "ort-sys/openvino" ]
onednn = [ "ort-sys/onednn" ]
directml = [ "ort-sys/directml" ]
nnapi = [ "ort-sys/nnapi" ]
coreml = [ "ort-sys/coreml" ]
xnnpack = [ "ort-sys/xnnpack" ]
rocm = [ "ort-sys/rocm" ]
acl = [ "ort-sys/acl" ]
armnn = [ "ort-sys/armnn" ]
tvm = [ "ort-sys/tvm" ]
migraphx = [ "ort-sys/migraphx" ]
rknpu = [ "ort-sys/rknpu" ]
vitis = [ "ort-sys/vitis" ]
cann = [ "ort-sys/cann" ]
qnn = [ "ort-sys/qnn" ]
webgpu = [ "ort-sys/webgpu" ]
azure = [ "ort-sys/azure" ]
nv = [ "ort-sys/nv" ]

[dependencies]
# fluent-voice-workspace-hack = { path = "../../workspace-hack" }
ort-sys = { path = "ort-sys", default-features = false }
smallvec = "2.0.0-alpha.11"
ndarray = { version = "0.16.1", default-features = false, optional = true }
libloading = { version = "0.8.8", optional = true }
ureq = { version = "3.1.2", optional = true, default-features = false, features = [ "rustls" ] }
sha2 = { version = "0.11.0-rc.2", optional = true }
tracing = { version = "0.1.41", optional = true, default-features = false }
half = { version = "2.6.0", default-features = false, optional = true }
num-complex = { version = "0.4.6", default-features = false, optional = true }
fluent-voice-workspace-hack = { path = "../../workspace-hack" }

[dev-dependencies]
anyhow = "1"
ureq = { version = "3.1.2", default-features = false, features = [ "native-tls" ] }
image = "0.25.8"
tracing-subscriber = { version = "0.3.20", default-features = false, features = [ "env-filter", "fmt" ] }
tokio = { version = "1.47", features = [ "test-util" ] }
