[package]
name = "fluent_voice_koko"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt", "sync", "macros"] }

[[bin]]
name = "koko"
path = "src/main.rs"
