[package]
name = "fluent_voice_kokoros"
version = "0.1.0"
edition = "2024"

[dependencies]
espeak-rs = "0.1.9"
hound = "3.5.1"
indicatif = "0.17.11"
lazy_static = "1.5.0"
mp3lame-encoder = "0.2.1"
ndarray = "0.16.1"
ndarray-npy = "0.9.1"

# Base ONNX Runtime configuration
ort = "1.16.3"
regex = "1.11.1"
reqwest = "0.12.19"
serde_json = "1.0.140"
tokio = "1.45.1"

[features]
default = ["cpu"]
cpu = []
cuda = ["ort/cuda"]
coreml = ["ort/coreml"]

[lib]
name = "speakrs_kokoros"
path = "src/lib.rs"
