[package]
name = "fluent_voice_kokoros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
espeak-rs.workspace = true
hound.workspace = true
indicatif.workspace = true
lazy_static.workspace = true
mp3lame-encoder.workspace = true
ndarray.workspace = true
ndarray-npy.workspace = true

# Base ONNX Runtime configuration
ort.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "macros"] }

[features]
default = ["cpu"]
cpu = []
cuda = ["ort/cuda"]
coreml = ["ort/coreml"]

[lib]
name = "speakrs_kokoros"
path = "src/lib.rs"
