[package]
name = "fluent_voice_kokoros"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/davidmaple/fluent-voice"

[dependencies]
fluent-voice-workspace-hack = { version = "0.1.0", path = "../../workspace-hack" }

espeak-rs = "0.1.9"
hound = "3.5.1"
indicatif = "0.18.0"
lazy_static = "1.5.0"
mp3lame-encoder = "0.2.1"
# ndarray = "0.16" # in workspace-hack
ndarray-npy = "0.9.1"

# Base ONNX Runtime configuration
ort = { version = "2.0.0-rc.10", features = ["load-dynamic"], optional = true }
regex = "1.11.1"
ndarray = "0.16.1"
tokio = "1.46.1"
serde_json = "1.0.140"
reqwest = "0.12.22"
# regex = "1.11.1" # in workspace-hack
# reqwest = { version = "0.12" } # in workspace-hack
# serde_json = "1.0.140" # in workspace-hack
# tokio = { version = "1.45.1", features = ["rt", "sync", "macros"] } # in workspace-hack

[features]
default = ["cpu", "ort"]
cpu = []
cuda = ["ort/cuda"]
coreml = ["ort/coreml"]

[lib]
name = "speakrs_kokoros"
path = "src/lib.rs"
